# djproject

./: .gitignore  README.md  setup.py
djproject/: README.md  poetry.toml  pyproject.toml
djproject/djproject/: settings.py  urls.py
