[tool.poetry]
name = "ark"
version = "0.1.0"
description = "A content manager app."
authors = ["Alexis Flores <afallendes@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
django-environ = "^0.10"
djangorestframework = "^3.14"
djangorestframework-simplejwt = "^5.3"
psycopg = "^3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
